# rusty-scribe

./: Cargo.toml  README.md  config.toml
src/: api.rs  audio.rs  clipboard.rs  config.rs  hotkeys.rs  main.rs
